# leadminer-ultimate

./: .gitignore  LICENSE  README.md  README_FIXES.md  index.html  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  phone_test_output.txt  tauri.conf.json  test_log.txt  test_output.txt  test_phone.rs
src-tauri/src/: ai.rs  ai_verification_test.rs  connection_test.rs  data_normalizer.rs  db.rs  lib.rs  main.rs  proxy_manager.rs  scraper.rs  settings.rs  tester.rs
src-tauri/tests/: db_integration_test.rs  integration_test.rs  parser_logic_test.rs  phone_normalization_test.rs
src-tauri/tests/fixtures/: 2gis_sample.html  google_maps_sample.html
src/components/: AiSettingsPanel.tsx  Settings.tsx
src/hooks/: useSettings.ts
