[package]
name = "leadminer-ultimate"
version = "0.1.0"
description = "B2B Lead Mining & OSINT Tool"
authors = ["LeadMiner Team"]
edition = "2021"

[lib]
name = "leadminer_ultimate"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["unstable"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "socks", "rustls-tls"] }
headless_chrome = { version = "1.0", features = ["fetch"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros"] }
regex = "1.0"
lazy_static = "1.4"
rand = "0.8"
url = "2.4"
scraper = "0.18"
futures = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
mockall = "0.11"
tokio-test = "0.4"
